Support for makros - 4